feat: update review retrieval methods to include user authorization and role-based access control #5